# aisurveywriter

./: .gitignore  README.md  base_credentials.yaml  chatbots.py  config.yaml  genstructure.yaml  main.py  nblmauto.py  paper_instructions.yaml  pyproject.toml  requirements.txt
bib/: all-imgdata.yaml  figures_filtered.json  figures_info.json  filtered-imgdata.yaml  nochu-imgdata.yaml  refextract-21papers.bib  refextract-bibdb.bib  refextract-imgdata.yaml  refextract_imgdata.yaml
bib/all-MiniLM-L6-v2-allimgfaiss/: index.faiss  index.pkl
bib/all-MiniLM-L6-v2-bibfaiss/: index.faiss  index.pkl
bib/all-mpnet-base-v2-allimgfaiss/: index.faiss  index.pkl
bib/all-mpnet-base-v2-bibfaiss/: index.pkl
bib/all-mpnet-base-v2-nochuimgfaiss/: index.faiss  index.pkl
bib/allmpnetbasev2-bibfaiss/: index.pkl
bib/googleembed_faiss_bib_db/: index.pkl
bib/multilingual-e5-large-instruct-allimgfaiss/: index.faiss  index.pkl
bib/multilingual-e5-large-instruct-bibfaiss/: index.pkl
bib/multilingual-e5-large-instruct-nochuimgfaiss/: index.faiss  index.pkl
bib/nomic-embed-text-v2-moe-bibfaiss/: index.pkl
bib/qwen2-1.5b-allimgfaiss/: index.faiss  index.pkl
bib/qwen2-1.5b-bibfaiss/: index.pkl
bib/snowflake-allfigures-rag.faiss/: index.faiss  index.pkl
bib/snowflake-arctic-embed-l-v2.0-allimgfaiss/: index.faiss  index.pkl
bib/snowflake-arctic-embed-l-v2.0-bibfaiss/: index.pkl
bib/snowflake-arctic-embed-l-v2.0-nochuimgfaiss/: index.faiss  index.pkl
bib/snowflake-content-rag.faiss/: index.faiss  index.pkl
bib/snowflake-figures-rag.faiss/: index.faiss  index.pkl
bib/snowflake-refextract-bibdb.faiss/: index.pkl
bib/stella_en_1.5B_v5/: index.pkl
bib/stella_en_1.5B_v5-allimgfaiss/: index.faiss  index.pkl
bib/stella_en_1.5B_v5-nochuimgfaiss/: index.faiss  index.pkl
notebooks/: generated20241213  sandbox.ipynb
prompt_cfgs/: prompt_config0.yaml  prompt_config2.yaml  prompt_config5.yaml  prompt_config_deepseek.yaml  prompt_config_ds.yaml  prompts-20250320.json  prompts-24022025.json  review_config1.yaml  review_config2.yaml  review_config4.yaml  review_config_ds.yaml
src/aisurveywriter/: __main__.py  agent.py  common.py  interface.py  survey_context.py
src/aisurveywriter/core/: agent_context.py  agent_rags.py  chatbots.py  config_manager.py  document.py  file_handler.py  latex_handler.py  llm_handler.py  lp_handler.py  paper.py  pdf_processor.py  pipeline.py  prompt_store.py  reference_store.py  text_embedding.py
src/aisurveywriter/res_extract/: __init__.py  figure_extract.py  (+1 more)
templates/: gen_paper_structure.yaml  paper_structure.yaml  paper_template.tex  preparation.yaml  prompt_config.yaml  review_config.yaml  write_prompt_fmt.yaml
useful-scripts/: auto.sh  bibfaiss.py  figfaiss.py
(+22 files in other folders)
