[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"


[project]
name = "aisurveywriter"
version = "0.0.2"
dependencies = [
    "selenium",
    "pandas",
    "numpy",
    "undetected-chromedriver",
    "fake-useragent",
    "pynvim",
    "torch",
    "torchvision",
    "setuptools",
    "langchain",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-ollama",
    "langchain-community",
    "langchain-huggingface",
    "detectron2@git+https://github.com/facebookresearch/detectron2.git@main",
    "layoutparser",
    "layoutparser[ocr]",
    "pdf2image",
    "pypdf",
    "pymupdf",
    "pillow",
    "bibtexparser",
    "gradio",
]
requires-python = ">=3.12"
description = "LLM tool to write Survey Papers based on PDF references"