[build-system]
requires = ["setuptools", "wheel", "torch", "torchvision"]
build-backend = "setuptools.build_meta"


[project]
name = "aisurveywriter"
version = "0.0.2"
dependencies = [
    "selenium",
    "pandas",
    "numpy",
    "undetected-chromedriver",
    "fake-useragent",
    "pynvim",
    "torch",
    "torchvision",
    "setuptools",
    "langchain",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-ollama",
    "langchain-community",
    "langchain-huggingface",
    "detectron2@git+https://github.com/facebookresearch/detectron2.git@ff53992b1985b63bd3262b5a36167098e3dada02",
    "layoutparser",
    "layoutparser[ocr]",
    "pdf2image",
    "pypdf",
    "pymupdf",
    "pillow",
    "bibtexparser",
    "scipy",
    "transformers",
    "sentence-transformers",
    "gradio",
]
requires-python = ">=3.12"
description = "LLM tool to write Survey Papers based on PDF references"